--- a/limtu/css/style.css
+++ b/limtu/css/style.css
@@ -4,9 +4,9 @@
 
 body {
 	font-family:Tahoma, Geneva, sans-serif;
-	background:url(../img/background2.jpg) fixed;
+	<!--background:url(../img/background2.jpg) fixed no-repeat top center;-->
 	font-size:14px;
-	color:#333;
+	color: #666;
 }
 
 .container {
@@ -18,12 +18,12 @@ body {
 h1 {
 	font-size:24px;
 	padding-bottom:10px;
-	color:#fff;
+	color:#666;
 }
 h2 {}
 h3 {
 	font-size:18px;
-	color:#fff;
+	color:#666;
 	padding-bottom:10px;
 }
 h4 {}
@@ -35,7 +35,7 @@ h4 {}
 .logo a {
 	font-size:24px;
 	font-style:italic;
-	color:#0F0;
+	color:#fff;
 }
 
 .header{
@@ -144,12 +144,14 @@ h4 {}
 }
 
 .cells {
-	width:80%;
+	width:70%;
 	padding:10px;
 	text-align:center;
+	color: black;
+	margin-left: 200px;
 }
 .cells  td{
-	border-bottom:solid 1px green;
+	border-bottom:solid 1px black;
 	margin:5px;
 	padding:10px;
 	text-align:center;
@@ -160,7 +162,7 @@ h4 {}
 
 
 .cells th {
-	border-bottom:solid 1px green;
+	border-bottom:solid 1px black;
 	width:150px;
 	padding:10px;
 	text-align:center;
