--- a/limtu/css/style.css
+++ b/limtu/css/style.css
@@ -4,7 +4,7 @@
 
 body {
 	font-family:Tahoma, Geneva, sans-serif;
-	<!--background:url(../img/background2.jpg) fixed no-repeat top center;-->
+	background:url(../img/bg.jpg) fixed repeat top center;
 	font-size:14px;
 	color: #666;
 }
