--- a/limtu/css/flex2.css
+++ b/limtu/css/flex2.css
@@ -8,13 +8,13 @@ ul {
     padding: 0;
 }
 
-.container {
+.container-flex {
     height: 100%;
-    margin: 0 auto;
+    margin: 30px auto;
     max-width: 1000px;
 }
 
-.menu {
+.menu-flex {
     height: 80px;
     justify-content: space-between;
     align-items: center;
@@ -22,7 +22,7 @@ ul {
 }
 
 
-.menu li {
+.menu-flex li {
     background: gray;
     flex: 0 0 auto;
     list-style-type: none;
@@ -89,8 +89,14 @@ ul {
     padding: 8px;
 }
 
-.footer {
-    height: 50px;
+.footer-flex {
+    height: 250px;
+    background: gray;
+    flex: 0 0 auto;
+}
+
+.header-flex {
+    height: 250px;
     background: gray;
     flex: 0 0 auto;
 }
