--- a/limtu/css/grid.css
+++ b/limtu/css/grid.css
@@ -107,3 +107,43 @@
 .offset-12 {
     margin-left: 100%
 }
+@media screen and (max-width: 960px) {
+.nodisplay {
+	display:none;
+}
+.container {
+	width:100%;
+}
+.col-mn-3 {
+    width: 33.333%
+}
+.col-mn-6 {
+    width: 66.667%
+}
+.col-mn-4 {
+    width: 50%
+}
+.topblock h2 {
+	font-size:16px;
+	font-weight:bold;
+}
+}
+
+@media screen and (max-width: 640px) {
+.nodisplay, .min-nodysplay {
+	display:none;
+}
+.col-mn-3 {
+    width: 50%
+}
+.col-mn-6 {
+    width: 100%
+}
+.col-mn-4 {
+    width: 100%
+}
+.topblock h2 {
+	font-size:14px;
+	font-weight:bold;
+}
+}
