--- a/limtu/css/style.css
+++ b/limtu/css/style.css
@@ -2,27 +2,30 @@
 @import "grid.css";
 @import "menu.css";
 
+
 body {
 	font-family:Tahoma, Geneva, sans-serif;
 	background:url(../img/bg.jpg) fixed repeat top center;
-	font-size:14px;
+	font-size:16px;
 	color: #666;
 }
 
 .container {
-	width:1200px;
+	width:90%;
 	margin: 0 auto;
 	text-align: left;
 }
 	
 h1 {
-	font-size:24px;
+	font-size:110%;
 	padding-bottom:10px;
 	color:#666;
 }
-h2 {}
+h2 {
+	padding-top:10px;
+	}
 h3 {
-	font-size:18px;
+	font-size:90%;
 	color:#666;
 	padding-bottom:10px;
 }
@@ -33,13 +36,13 @@ h4 {}
 	padding-left:10px;
 }
 .logo a {
-	font-size:24px;
+	font-size:115%;
 	font-style:italic;
 	color:#fff;
 }
 
 .header{
-	height:250px;
+	height:30%;
 	text-align:center;
 }
 
@@ -49,35 +52,36 @@ h4 {}
 }*/
 
 .main {
-	min-height:500px;
+	min-height:50%;
 }
 
 .topline {
-	height:40px;
 	background-color: #000;
 }
 .top-text {
 	color:#FFF;
 }
 .search_form {
+	width:180px;
 	display:inline-block;
-	margin:5px;
+	margin:7px 15px;
 	float:right;
 }
 
 
 .search_form input {
-	height:30px;
-	width:195px;
+	height:25px;
+	width:100%;
 	padding-left:5px;
 	color: #999;
 }
 
 .register{
-	width:180px;
-	margin-top:10px;
+	display:inline-block;
+	float:right;
+	margin-top:13px;
 	color:#fff;
-	font-size:13px;
+	font-size:80%;
 }
 .register a {
 	color:#fff;
@@ -90,38 +94,47 @@ h4 {}
 .rigtcol {}
 
 .footer {
-	height:300px;
-	margin-top:100px;
+	margin-top:10%;
+	height:100%;
+	overflow: inherit;
+}
+
+.footer div {
 	text-align:center;
-	margin-bottom:0px;
+	overflow: hidden;
+}
+
+.footer div h3{
+	font-size:2em;
 }
 
 .topblock {}
 
 .tst-col-main div {
 	overflow:hidden;
-	height:400px;
+	max-height:400px;
 	background: #fff;
 	border:5px solid #FFF;
-	margin:20px;
+	margin-right:10px;
 	text-align-last: justify;
 }
 
 .tst-col-main img {
-	height: 400px;
+	height: 100%;
 }
 
 .tst-col-head div {
 	overflow:hidden;
-	height:190px;
-	text-align:center;
-	padding-top:5px;
-	margin:20px 5px;
+	margin-top:10px;
+
+
 }
 
 .tst-col-head img {
-	height: 185px;
+	height: 100%;
+	width: 100%;
 	border:3px solid #000;
+	margin-right:3px;
 }
 
 .tst-col-foot div {
@@ -131,9 +144,11 @@ h4 {}
 	margin:10px;
 	font-size:12px;
 }
+
 .breadcrumbs {
 	padding:10px;
 }
+
 .topblock {
 	text-align:center;
 	font-size:24px;
@@ -151,6 +166,7 @@ h4 {}
 	color: black;
 	margin-left: 200px;
 }
+
 .cells  td{
 	border-bottom:solid 1px black;
 	margin:5px;
@@ -160,7 +176,6 @@ h4 {}
 .cells  tr{
 	height:30px;
 }
-
 
 .cells th {
 	border-bottom:solid 1px black;
@@ -234,4 +249,17 @@ textarea {
 	cursor:pointer;
 }
 
-.reg-form input[type="submit"]:hover { background: #bbb; }
+.reg-form input[type="submit"]:hover { background: #bbb; 
+}
+
+@media screen and (max-width: 960px) {
+.topblock h2 {
+	font-size:16px;
+}
+}
+
+@media screen and (max-width: 640px) {
+.topblock h2 {
+	font-size:14px;
+}
+}
