--- a/limtu/css/adaptive.css
+++ b/limtu/css/adaptive.css
@@ -53,3 +53,17 @@ height (px, em..), min-height, max-height*/
 portrait
 landscape*/
 
+/*1600
+1200
+960
+760
+480
+320*/
+
+/*
+px, %, em
+font-size:16pt;
+1em =16pt;
+
+
+
